--- a/app.json
+++ b/app.json
@@ -38,7 +38,7 @@
     ],
     "extra": {
       "eas": {
-        "projectId": "340da4e2-4912-4733-a80c-b923493608a0"
+        "projectId": ""
       }
     },
     "owner": "bananalabs"
