fix: add EAS projectId

--- a/app.json
+++ b/app.json
@@ -38,7 +38,7 @@
     ],
     "extra": {
       "eas": {
-        "projectId": ""
+        "projectId": "a349398d-ed7b-4ae2-8561-7e0a246e7047"
       }
     },
     "owner": "bananalabs"
